--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+   flex-direction: column;
+    overflow-x: hidden;
+    min-height: 100vh;
   }
   
   .container {
