--- a/style.css
+++ b/style.css
@@ -62,5 +62,20 @@ h1 {
 footer {
   margin-top: 40px;
   font-size: 20px;
-  color: #aaaaaa;
+  color: #f8f3f3;
+}
+body {
+  position: relative;
+}
+
+body::after {
+  content: "";
+  display: block;
+  width: 100vw;
+  height: 1px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  pointer-events: none;
+  overflow-x: hidden;
 }
