--- a/style.css
+++ b/style.css
@@ -8,16 +8,16 @@
 
 html, body {
   width: 100%;
+  height: 100%; /* ALTERADO de min-height para height */
   overflow-x: hidden;
   background-color: #0d0d0d;
   color: #f5f5dc;
   font-family: 'Arial', sans-serif;
-  min-height: 100vh;
 }
 
 .container {
   text-align: center;
-  padding: 30px 20px 40px;
+  padding: 30px 20px 0;
 }
 
 .logo {
@@ -60,22 +60,8 @@ h1 {
 }
 
 footer {
-  margin-top: 40px;
+  margin-top: 30px;
+  margin-bottom: 10px;
   font-size: 20px;
   color: #f8f3f3;
-}
-body {
-  position: relative;
-}
-
-body::after {
-  content: "";
-  display: block;
-  width: 100vw;
-  height: 1px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  pointer-events: none;
-  overflow-x: hidden;
 }
