--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@
 html, body {
   width: 100%;
   height: 100%; /* ALTERADO de min-height para height */
-  overflow-x: hidden;
+  overflow: hidden;
   background-color: #0d0d0d;
   color: #f5f5dc;
   font-family: 'Arial', sans-serif;
+  
 }
 
 .container {
